.flux/todo-list/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list
  namespace: default
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.app: glob:latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-list
  template:
    metadata:
      labels:
        app: todo-list
    spec:
      containers:
        - name: todo-list
          image: ghcr.io/adisoncavani/todo-list:0.0.1
          ports:
            - containerPort: 3000
