.flux/todo-list/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-list-service
  namespace: default
spec:
  selector:
    app: todo-list
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - todo.k1ng.dev
      secretName: todo-k1ng-dev-tls
  rules:
    - host: todo.k1ng.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-list-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress
spec:
  type: LoadBalancer
  selector:
    name: nginx-ingress-microk8s
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
